# specy_emu

./: README.md
media/: Automania (1985)(Mikro-Gen).tap  Barbarian - 1 Player (1987)(Palace).tap  Batman (1986)(Ocean Software).tap  CLIFFHAN.TAP  Freddy Hardest (1987)(Dinamic).tap  MADMIX.TAP  Outrun (1987)(US Gold).tap  PHANTOM2.TAP  POGO.TAP  SPIRITS.TAP  Sly Spy (1990)(Ocean Software).tap  Spy Hunter (19xx)(US Gold).tap  Spy Vs. Spy (1985)(Beyond).tap  Uridium1.tap  West Bank (Spanish).tap
src/: CMakeLists.txt  generate_vs.py  specy_emu.cpp  specy_rom.cpp  specy_rom.h
src/audio/: CMakeLists.txt  audio_render.h  sdl_audio_render.cpp
src/clocks/: CMakeLists.txt  clk_master.cpp  clk_master.h
src/keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.h  sdl_keyboard.h
src/render/: CMakeLists.txt  keyboard.h  render.h  sdl_keyboard.cpp  sdl_render.cpp
src/storage/: CMakeLists.txt  tap_loader.cpp  tap_loader.h
src/ula/: CMakeLists.txt  audio.cpp  audio.h  clk_master.cpp  clk_master.h  display.cpp  display.h  display_consts.h  tape_audio.cpp  tape_audio.h  ula.cpp  ula.h
src/video/: CMakeLists.txt  sdl_video_render.cpp  video_render.h
src/z80/: CMakeLists.txt
src/z80/cpu/: CMakeLists.txt  bitops_x64.inc  cpu.asm  cpuregs.inc  dirs_x64.inc  interrupts.inc  macros.inc  opcodesdef.inc  opcodesimpl.c  opcodesimpl.cpp  opcodesimpl_x64.inc  opcodesimpl_x64.inc.bak  x64_arch.inc  x86_arch.inc  z80.cpp  z80.cpp.bak  z80.h
src/z80/test/: CMakeLists.txt  unit_tests.cpp  z80doc.out
src/z80/tools/: CMakeLists.txt  invoke.inc  log.c
tests/: generate.py  process.py
