cmake_minimum_required(VERSION 3.10)

file(GLOB Z80_SOURCES "*.asm" "*.cpp" "c")
file(GLOB Z80_HEADERS "*.inc" "*.h" "*.hpp")

add_subdirectory( ./cpu)
add_subdirectory( ./tools)
add_subdirectory( ./test)

set(Z80_INCLUDE_DIRS ${Z80_CPU_INCLUDE_DIRS} ${Z80_TOOLS_INCLUDE_DIRS} PARENT_SCOPE)
set(Z80_CPU_INCLUDE_DIRS ${Z80_CPU_INCLUDE_DIRS} PARENT_SCOPE)
set(Z80_TOOLS_INCLUDE_DIRS ${Z80_TOOLS_INCLUDE_DIRS} PARENT_SCOPE)
set(Z80_SOURCES ${Z80_SOURCES} ${Z80_CPU_SOURCES} ${Z80_TOOLS_SOURCES} PARENT_SCOPE)
set(Z80_HEADERS ${Z80_HEADERS} ${Z80_CPU_HEADERS} ${Z80_TOOLS_HEADERS} PARENT_SCOPE)
set(Z80_UNIT_TESTS_SOURCES ${Z80_UNIT_TESTS_SOURCES} PARENT_SCOPE)